# nix-gobject

./: README.md  flake.nix  meson.build  shell.nix
expr/: meson.build
expr/include/nix-gobject/: eval.h  value.h
expr/lib/: eval.cc  value.cc
